Reuse the Integer object cache in tests.