@@ -124,7 +124,7 @@ public class PerformanceComparison {
     }
 
     private long log4j(final int loop) {
-        final Integer j = new Integer(2);
+        final Integer j = Integer.valueOf(2);
         final long start = System.nanoTime();
         for (int i = 0; i < loop; i++) {
             log4jlogger.debug("SEE IF THIS IS LOGGED " + j + '.');
@@ -133,7 +133,7 @@ public class PerformanceComparison {
     }
 
     private long logback(final int loop) {
-        final Integer j = new Integer(2);
+        final Integer j = Integer.valueOf(2);
         final long start = System.nanoTime();
         for (int i = 0; i < loop; i++) {
             logbacklogger.debug("SEE IF THIS IS LOGGED " + j + '.');
@@ -143,7 +143,7 @@ public class PerformanceComparison {
 
 
     private long log4j2(final int loop) {
-        final Integer j = new Integer(2);
+        final Integer j = Integer.valueOf(2);
         final long start = System.nanoTime();
         for (int i = 0; i < loop; i++) {
             logger.debug("SEE IF THIS IS LOGGED " + j + '.');
@@ -153,7 +153,7 @@ public class PerformanceComparison {
 
 
     private long writeToWriter(final int loop, final Writer w) throws Exception {
-        final Integer j = new Integer(2);
+        final Integer j = Integer.valueOf(2);
         final long start = System.nanoTime();
         for (int i = 0; i < loop; i++) {
             w.write("SEE IF THIS IS LOGGED " + j + '.');
@@ -162,7 +162,7 @@ public class PerformanceComparison {
     }
 
     private long writeToStream(final int loop, final OutputStream os) throws Exception {
-        final Integer j = new Integer(2);
+        final Integer j = Integer.valueOf(2);
         final long start = System.nanoTime();
         for (int i = 0; i < loop; i++) {
             os.write(getBytes("SEE IF THIS IS LOGGED " + j + '.'));
@@ -171,7 +171,7 @@ public class PerformanceComparison {
     }
 
     private long writeToChannel(final int loop, final FileChannel channel) throws Exception {
-        final Integer j = new Integer(2);
+        final Integer j = Integer.valueOf(2);
         final ByteBuffer buf = ByteBuffer.allocateDirect(8*1024);
         final long start = System.nanoTime();
         for (int i = 0; i < loop; i++) {
